# Tictonix

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  README.ru.md  rustfmt.toml
example/: Cargo.toml
example/src/: main.rs
src/: embeddings.rs  error.rs  lib.rs  main.rs  matrix_io.rs  positional_encoding.rs
