[package]
name = "tictonix"
version = "0.7.0"
repository = "https://github.com/Ave-Sergeev/Tictonix"
description = "A library that provides the ability to convert tokens into embeddings, as well as to encode their positions"
authors = ["Artem Sergeev"]
keywords = ["embeddings", "positional-encoding"]
categories = ["encoding", "mathematics"]
readme = "README.md"
edition = "2024"
license = "MIT"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE*"
]

[dependencies]
rand = "0.9.0"
rand_distr = "0.5.1"
approx = "0.5.1"
anyhow = "1.0.97"
ndarray = "0.16.1"
bytemuck = "1.22.0"
thiserror = "2.0.12"
safetensors = "0.5.3"
