[package]
name = "tictonix"
version = "1.0.0"
repository = "https://github.com/Ave-Sergeev/Tictonix"
description = "A library that provides the ability to convert tokens into embeddings, as well as to encode their positions"
authors = ["Artem Sergeev"]
keywords = ["embeddings", "positional-encoding", "deep-learning", "machine-learning"]
categories = ["encoding", "mathematics", "science"]
readme = "README.md"
edition = "2024"
license = "MIT"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE*"
]

[dependencies]
log = "0.4.27"
rand = "0.9.1"
regex = "1.11.1"
rayon = "1.10.0"
approx = "0.5.1"
anyhow = "1.0.98"
ndarray = "0.16.1"
bytemuck = "1.23.0"
thiserror = "2.0.12"
rand_distr = "0.5.1"
safetensors = "0.5.3"
